--- a/requirements.txt
+++ b/requirements.txt
@@ -1,117 +1,82 @@
 altair==4.1.0
 argon2-cffi==20.1.0
 astor==0.8.1
-astroid==2.4.2
 async-generator==1.10
-attrs==20.3.0
+attrs==21.2.0
 backcall==0.2.0
-base58==2.0.1
-biopython==1.78
-bleach==3.2.1
+base58==2.1.0
+bleach==4.0.0
 blinker==1.4
-cachetools==4.2.0
-certifi==2020.12.5
-cffi==1.14.4
-chardet==3.0.4
+cachetools==4.2.2
+certifi==2021.5.30
+cffi==1.14.6
+charset-normalizer==2.0.4
 click==7.1.2
-confuse==1.4.0
-cycler==0.10.0
-decorator==4.4.2
-defusedxml==0.6.0
+debugpy==1.4.1
+decorator==5.0.9
+defusedxml==0.7.1
 entrypoints==0.3
-Flask==1.1.2
-gitdb==4.0.5
-GitPython==3.1.11
-htmlmin==0.1.12
-idna==2.10
-ImageHash==4.2.0
-ipykernel==5.4.0
-ipython==7.19.0
+gitdb==4.0.7
+GitPython==3.1.18
+idna==3.2
+ipykernel==6.0.3
+ipython==7.26.0
 ipython-genutils==0.2.0
-ipywidgets==7.5.1
-isort==5.6.4
-itsdangerous==1.1.0
-jedi==0.17.2
-Jinja2==2.11.2
-joblib @ file:///tmp/build/80754af9/joblib_1601912903842/work
+ipywidgets==7.6.3
+jedi==0.18.0
+Jinja2==3.0.1
 jsonschema==3.2.0
-jupyter-client==6.1.7
-jupyter-core==4.7.0
+jupyter-client==6.1.12
+jupyter-core==4.7.1
 jupyterlab-pygments==0.1.2
-kiwisolver @ file:///home/conda/feedstock_root/build_artifacts/kiwisolver_1604322295622/work
-lazy-object-proxy==1.4.3
+jupyterlab-widgets==1.0.0
 lxml==4.6.3
-MarkupSafe==1.1.1
-matplotlib @ file:///home/conda/feedstock_root/build_artifacts/matplotlib-suite_1605180228501/work
-mccabe==0.6.1
-missingno==0.4.2
+MarkupSafe==2.0.1
+matplotlib-inline==0.1.2
 mistune==0.8.4
-mkl-fft==1.2.0
-mkl-random==1.1.1
-mkl-service==2.3.0
 multitasking==0.0.9
-nbclient==0.5.1
-nbconvert==6.0.7
-nbformat==5.0.8
-nest-asyncio==1.4.3
-networkx==2.5
-notebook==6.1.5
-numpy @ file:///tmp/build/80754af9/numpy_and_numpy_base_1603570489231/work
-olefile @ file:///home/conda/feedstock_root/build_artifacts/olefile_1602866521163/work
-packaging==20.7
-pandas==1.1.5
-pandas-profiling==2.11.0
+nbclient==0.5.3
+nbconvert==6.1.0
+nbformat==5.1.3
+nest-asyncio==1.5.1
+notebook==6.4.2
+numpy==1.21.1
+packaging==21.0
+pandas==1.3.1
 pandocfilters==1.4.3
-parso==0.7.1
+parso==0.8.2
 pexpect==4.8.0
-phik==0.11.2
 pickleshare==0.7.5
-Pillow @ file:///home/conda/feedstock_root/build_artifacts/pillow_1604748700719/work
-prometheus-client==0.9.0
-prompt-toolkit==3.0.8
-protobuf==3.14.0
-ptyprocess==0.6.0
-pyarrow==2.0.0
-pycairo==1.20.0
+Pillow==8.3.1
+prometheus-client==0.11.0
+prompt-toolkit==3.0.19
+protobuf==3.17.3
+ptyprocess==0.7.0
+pyarrow==5.0.0
 pycparser==2.20
-pydeck==0.5.0
-Pygments==2.7.3
-pylint==2.6.0
+pydeck==0.6.2
+Pygments==2.9.0
 pyparsing==2.4.7
-pyrsistent==0.17.3
-python-dateutil==2.8.1
-pytz @ file:///home/conda/feedstock_root/build_artifacts/pytz_1604321279890/work
-PyWavelets==1.1.1
-PyYAML==5.4.1
-pyzmq==20.0.0
-reportlab==3.5.51
-requests==2.25.0
-scikit-learn @ file:///tmp/build/80754af9/scikit-learn_1598376899566/work
-scipy @ file:///tmp/build/80754af9/scipy_1597686649129/work
-seaborn==0.11.1
-Send2Trash==1.5.0
-six @ file:///tmp/build/80754af9/six_1605205327372/work
-smmap==3.0.4
-SQLAlchemy @ file:///home/conda/feedstock_root/build_artifacts/sqlalchemy_1602547018298/work
-streamlit==0.72.0
-streamlit-pandas-profiling==0.1.1
-tangled-up-in-unicode==0.0.7
-terminado==0.9.1
-testpath==0.4.4
-threadpoolctl @ file:///tmp/tmp9twdgx9k/threadpoolctl-2.1.0-py3-none-any.whl
+pyrsistent==0.18.0
+python-dateutil==2.8.2
+pytz==2021.1
+pyzmq==22.2.1
+requests==2.26.0
+Send2Trash==1.7.1
+six==1.16.0
+smmap==4.0.0
+streamlit==0.86.0
+terminado==0.10.1
+testpath==0.5.0
 toml==0.10.2
 toolz==0.11.1
-tornado @ file:///home/conda/feedstock_root/build_artifacts/tornado_1604105045397/work
-tqdm==4.59.0
+tornado==6.1
 traitlets==5.0.5
 tzlocal==2.1
-urllib3==1.26.2
-validators==0.18.1
-visions==0.6.0
-watchdog==1.0.1
+urllib3==1.26.6
+validators==0.18.2
+watchdog==2.1.3
 wcwidth==0.2.5
 webencodings==0.5.1
-Werkzeug==1.0.1
 widgetsnbextension==3.5.1
-wrapt==1.12.1
 yfinance==0.1.63
